22Feb07=======================================================================
1. add show/myfdx to Aliases. 
15Feb07=======================================================================
1. allow convkeps.pl to parse NORAD keps files.
22Jan07=======================================================================
1. disable default propagation of PC9x sentences
2. simplify PC17 handling 
16Jan07=======================================================================
1. back ported a change to PC16 handling so that a locally connected node's
info clears out and generally overrides any residual PC16 info gathered from
elsewhere.
15Jan07=======================================================================
1. added CTY-1701
07Jan07=======================================================================
1. use IO::Socket blocking where available and switch off or ignore all 
attempts to block.
05Jan07=======================================================================
1. increase default ephemeral deduping on PC15 to 6 minutes (from 2).
23Nov06=======================================================================
1. added wrapping to over length lines in console.pl.
03Nov06=======================================================================
1. add CTY-1609 changes
2. add back Geo::Taf code with submitted mods
3. add new version of the sh/425 code using the new database location.
09Oct06=======================================================================
1. fix problems with bad filters pointed by Thomas DL3SBB.
27Jul06=======================================================================
1. merge in official issue version of wpxloc.raw (with one change: 4U1V).
26Jul06=======================================================================
1. incorporated Jim AD1C's spiffy new, unified, wpxloc.raw and version 
1605 of cty.dat.
21Jul06=======================================================================