@@ -399,6 +399,7 @@
   'AG8' => '483,496,510',
   'AG9' => '475,476,509',
   'AH0' => '111',
+  'AH0AH' => '220',
   'AH1' => '101',
   'AH2' => '102',
   'AH2AK' => '220',
@@ -451,6 +452,7 @@
   'AL1VE' => '220',
   'AL7C' => '220',
   'AL7KT' => '220',
+  'AL7LV' => '220',
   'AL7O' => '220',
   'AL7QQ' => '220',
   'AL7W' => '220',
@@ -683,7 +685,6 @@
   'CE0Y' => '17',
   'CE0Z' => '19',
   'CE9' => '99,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384',
-  'CE9/R7C' => '99,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384',
   'CE9/VK0LD' => '99,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384',
   'CE9A' => '208',
   'CE9R' => '208',
@@ -902,6 +903,7 @@
   'GB0CLC' => '66',
   'GB0CLR' => '63',
   'GB0CSC' => '62',
+  'GB0CVA' => '66',
   'GB0DDF' => '62',
   'GB0DGL' => '64,351',
   'GB0FFS' => '64,351',
@@ -910,6 +912,7 @@
   'GB0GDS' => '64,351',
   'GB0GEI' => '64,351',
   'GB0GHD' => '64,351',
+  'GB0GIW' => '66',
   'GB0GKR' => '64,351',
   'GB0GLV' => '66',
   'GB0GNE' => '64,351',
@@ -935,9 +938,11 @@
   'GB0ON' => '65',
   'GB0OS' => '64,351',
   'GB0OYT' => '64,351',
+  'GB0PPE' => '64,351',
   'GB0PSG' => '66',
   'GB0PSM' => '62',
   'GB0QWM' => '64,351',
+  'GB0RBS' => '64,351',
   'GB0REL' => '62',
   'GB0RPO' => '66',
   'GB0RSC' => '66',
@@ -949,6 +954,7 @@
   'GB0SIC' => '62',
   'GB0SK' => '64,351',
   'GB0SKY' => '64,351',
+  'GB0SOA' => '66',
   'GB0SPD' => '62',
   'GB0SPS' => '66',
   'GB0SRH' => '66',
@@ -974,6 +980,7 @@
   'GB1TDS' => '66',
   'GB2000SET' => '66',
   'GB200HNT' => '66',
+  'GB2AGG' => '64,351',
   'GB2ANG' => '66',
   'GB2AST' => '64,351',
   'GB2AYR' => '64,351',
@@ -992,7 +999,9 @@
   'GB2GOL' => '66',
   'GB2GSG' => '66',
   'GB2GSS' => '66',
+  'GB2GTM' => '64,351',
   'GB2GU' => '65',
+  'GB2HDG' => '66',
   'GB2HI' => '64,351',
   'GB2HRH' => '64,351',
   'GB2HST' => '64,351',
@@ -1013,6 +1022,7 @@
   'GB2LBN' => '64,351',
   'GB2LCL' => '64,351',
   'GB2LCP' => '64,351',
+  'GB2LGB' => '64,351',
   'GB2LL' => '62',
   'GB2LMG' => '64,351',
   'GB2LNM' => '64,351',
@@ -1051,6 +1061,7 @@
   'GB2RTB' => '66',
   'GB2SDD' => '66',
   'GB2SIP' => '66',
+  'GB2SKG' => '64,351',
   'GB2SLH' => '64,351',
   'GB2SSF' => '64,351',
   'GB2STB' => '64,351',
@@ -1058,10 +1069,14 @@
   'GB2TD' => '66',
   'GB2TDS' => '64,351',
   'GB2TI' => '64,351',
+  'GB2TTA' => '66',
   'GB2VK' => '66',
   'GB2WB' => '61',
   'GB2WBB' => '64,351',
+  'GB2WDS' => '66',
   'GB2WFF' => '66',
+  'GB2WHO' => '66',
+  'GB2WSF' => '66',
   'GB3GD' => '61',
   'GB3GM' => '64,351',
   'GB3MNI' => '62',
@@ -1077,11 +1092,13 @@
   'GB4ES' => '62',
   'GB4GM' => '64,351',
   'GB4HMD' => '66',
+  'GB4HMM' => '66',
   'GB4IOM' => '61',
   'GB4LNM' => '64,351',
   'GB4LSG' => '66',
   'GB4MD' => '66',
   'GB4MDI' => '66',
+  'GB4NDG' => '66',
   'GB4NFE' => '64,351',
   'GB4PMS' => '64,351',
   'GB4RAF' => '64,351',
@@ -1306,7 +1323,6 @@
   'JD1YAA' => '93',
   'JD1YBJ' => '93',
   'JE' => '92',
-  'JE7IZM/JD1' => '93',
   'JF' => '92',
   'JG' => '92',
   'JG8NQJ/JD1' => '93',
@@ -1436,7 +1452,6 @@
   'K9HUY' => '220',
   'K9JF' => '220',
   'K9OM' => '220',
-  'K9PET/KC4' => '99,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384',
   'K9VV' => '220',
   'KA0' => '467,473,477,484,485,489,490,502',
   'KA1' => '468,480,482,491,500,507',
@@ -1468,7 +1483,6 @@
   'KC3MR' => '220',
   'KC4' => '460,471,472,478,488,501,503,506,533,534,535',
   'KC4/K2ARB' => '99,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384',
-  'KC4/R7C' => '99,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384',
   'KC4AAA' => '99,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384',
   'KC4AAC' => '99,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384',
   'KC4AAF' => '99,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384',
@@ -1588,6 +1602,7 @@
   'KL2A/7' => '220',
   'KL7' => '112,389,390,391,392',
   'KL7FDQ' => '220',
+  'KL7WP' => '220',
   'KL7XX' => '220',
   'KL9K' => '78',
   'KM0' => '467,473,477,484,485,489,490,502',
@@ -2132,6 +2147,7 @@
   'NH5K' => '106',
   'NH6' => '387,388',
   'NH7' => '387,388',
+  'NH7C' => '220',
   'NH7K' => '108',
   'NH8' => '109',
   'NH9' => '110',
@@ -2319,7 +2335,7 @@
   'OC' => '122',
   'OD' => '123',
   'OE' => '124',
-  'OE3XHA/VFW06' => '124',
+  'OE3XHA/SH75' => '124',
   'OF' => '125',
   'OF0' => '126',
   'OG' => '125',
@@ -3022,6 +3038,7 @@
   'TO5T' => '46',
   'TO5X' => '46',
   'TO6M' => '46',
+  'TO6T' => '43',
   'TO7ACR' => '43',
   'TO7AES' => '43',
   'TO7C' => '59',
@@ -3527,6 +3544,8 @@
   'VU7' => '215',
   'VU7/A' => '214',
   'VU7/L' => '215',
+  'VU7MY/JOS' => '215',
+  'VU7MY/RBI' => '215',
   'VV' => '459',
   'VV4' => '214',
   'VV7' => '215',
@@ -3573,11 +3592,8 @@
   'W2OO' => '220',
   'W2VJN' => '220',
   'W3' => '469,470,481,499',
-  'W3ASA/KC4' => '99,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384',
   'W3CP' => '220',
   'W3HDH' => '220',
-  'W3WKO/KC4' => '99,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384',
-  'W3WKP/KC4' => '99,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384',
   'W4' => '460,471,472,478,488,501,503,506',
   'W4BCG' => '220',
   'W4CID' => '220',
