@@ -1,3 +1,5 @@
+04Mar07=======================================================================
+1. add CTY 1702 prefix data files
 22Feb07=======================================================================
 1. add show/myfdx to Aliases. 
 15Feb07=======================================================================
